--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  sleek_circular_slider: ^2.0.1
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
