--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   vibration: ^3.1.3
   shared_preferences: ^2.5.3
-
+  streakify: ^0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
