--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   vibration: ^3.1.3
   shared_preferences: ^2.5.3
+  avatar_glow: ^3.0.1
+  flutter_local_notifications: ^18.0.0
 
 dev_dependencies:
   flutter_test:
